--- a/sudoku/garbage but importance/sudoku_2(Divyesh).html
+++ b/sudoku/garbage but importance/sudoku_2(Divyesh).html
@@ -6,7 +6,6 @@
         <title>Document</title>
 </head>
 <body>
-        <h1>hello</h1>
-        <h1>done </h1>
+        <p>ok Document</p>
 </body>
 </html>
