--- a/sudoku/garbage but importance/sudoku_2(Divyesh).html
+++ b/sudoku/garbage but importance/sudoku_2(Divyesh).html
@@ -12,9 +12,11 @@
         <h3>hrdfgodfjg
 
         </h3>
-        <h1>chirag bro 
+        <h1>chirag bro </h1
+        <h1>chirag bro </h1>
+        <h2>harshil bro</h2>
 
         </h1>
->>>>>>> 9652303ac06bf2f4b4b5bb9387612ab6bfbcf8b9
+
 </body>
 </html>
