--- a/sudoku/garbage but importance/sudoku_2(Divyesh).html
+++ b/sudoku/garbage but importance/sudoku_2(Divyesh).html
@@ -7,16 +7,8 @@
 </head>
 <body>
         <p>hello friend</p>
-        <h1>my namel[] is chirag</h1>
+        <h1>my name is chirag</h1>
         <h2>hello</h2>
-        <h3>hrdfgodfjg
-
-        </h3>
-        <h1>chirag bro </h1
-        <h1>chirag bro </h1>
-        <h2>harshil bro</h2>
-
-        </h1>
 
 </body>
 </html>
