update frm harshil

--- a/sudoku/garbage but importance/sudoku_2(Divyesh).html
+++ b/sudoku/garbage but importance/sudoku_2(Divyesh).html
@@ -6,9 +6,8 @@
         <title>Document</title>
 </head>
 <body>
-        <p>hello friend</p>
-        <h1>my name is chirag</h1>
-        <h2>hello</h2>
-
+        <h1> i may name is harshil i am here to demo a github in may laptop
+                that is now a mint so i try my best in this
+        </h1>
 </body>
 </html>
