add new changes

--- a/whack a mole/index.html
+++ b/whack a mole/index.html
@@ -64,6 +64,14 @@
             <div class="for-massage">
                 <h1 class="game-win">game complate at 20</h1>
             </div>
+
+            <!--for a deficulty-->
+            <div class="deficulty-menu">
+                <button class="deficulty" id="easy">easy</button>
+                <button class="deficulty" id="normal">normal</button>
+                <button class="deficulty" id="hard">hard</button>
+            </div>
+
             <!--div for score detail-->
             <div class="score-menu">
                 <p class="score">score : 0</p>
@@ -71,6 +79,11 @@
             <!--div for start detail-->
             <div class="start-menu">
                 <h2 class="start">start</h2>
+                <h2 class="Restart">ReSet Deficulty</h2>
+            </div>
+
+            <div class="start-menu">
+                
             </div>
         </div>
     </main>    
